[gd_scene load_steps=4 format=3 uid="uid://bxcpeyhdcakgk"]

[ext_resource type="PackedScene" uid="uid://nx04iyu4u1my" path="res://game.tscn" id="1_uewdv"]
[ext_resource type="Script" path="res://master_scene.gd" id="1_x1n4q"]

[sub_resource type="SystemFont" id="SystemFont_8yi3b"]
font_weight = 475
font_stretch = 150
subpixel_positioning = 0

[node name="MasterScene" type="Node2D"]
script = ExtResource("1_x1n4q")

[node name="Game" parent="." instance=ExtResource("1_uewdv")]
unique_name_in_owner = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.823529)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.662745, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 20
theme_override_fonts/font = SubResource("SystemFont_8yi3b")
theme_override_font_sizes/font_size = 265
text = "GAME OVER"

[node name="Restart" type="Button" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.0
offset_top = 163.0
offset_right = 516.0
offset_bottom = 378.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.64, 1)
theme_override_colors/font_color = Color(0, 0.415686, 0, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 151
text = "Play Again?"

[connection signal="playerDeath" from="Game" to="." method="_on_game_player_death"]
[connection signal="pressed" from="GameOver/Restart" to="." method="_on_restart_pressed"]
